whitespace fix

--- a/src/css/Testimonials.css
+++ b/src/css/Testimonials.css
@@ -1,5 +1,5 @@
 .testimonials-container {
-  padding-bottom: 5%;
+  padding-bottom: 1%;
   background-image: url('/home/bg/4.png');
   background-repeat: no-repeat;
   background-position: bottom left;
@@ -62,7 +62,7 @@
 
 @media (max-width: 768px) {
   .testimonials-container {
-    padding-bottom: 5%;
+    padding-bottom: 1%;
     background-image: url('/home/bg/4.png');
     background-repeat: no-repeat;
     background-position: bottom left;
