--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@ body, html, .App, #root, .auth-wrapper {
   /* padding: 4rem; */
   /* padding-top: 2rem; */
   position: relative;
-  padding-bottom: 2rem;
+  /* padding-bottom: 2rem; */
   height: 40rem;
 }
 
@@ -158,7 +158,7 @@ body, html, .App, #root, .auth-wrapper {
 .explore-courses {
   font-size: xx-large;
   text-align: center;
-  padding: 7% 0% 0% 0%;
+  /* padding: 7% 0% 0% 0%; */
   width: 95%;
   margin-left: 2.5%;
 }
@@ -170,7 +170,7 @@ body, html, .App, #root, .auth-wrapper {
 }
 
 .common-div {
-  padding: 7% 0% 0% 0%;
+  /* padding: 7% 0% 0% 0%; */
   width: 95%;
   margin-left: 2.5%;
 }
